freqtrade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freqtrade
  namespace: freqtrade
  labels:
    app: freqtrade
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: freqtrade
