freqtrade/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freqtrade
  namespace: freqtrade
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - freqtrade.k.shion1305.com
  rules:
    - host: freqtrade.k.shion1305.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freqtrade
                port:
                  number: 8080
